# qdds

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  Pipfile  README.md  devserver.py  pyproject.toml  setup.py
qdds/: cli.py
qdds.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
qdds/tests/: test_cli.py
